--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ html, body
 {
     width: 100%;
     height: 100%;
-    
     margin: 0;
     padding: 0;
 }
@@ -40,7 +39,27 @@ body {
 }
 
 .container {
-    margin-top: 5%;
-    margin-right: 5%;
-    margin-left: 5%;
+    /* margin-right: 5%; */
+    /* margin-left: 5%; */
+    padding: 5%;
+    display: none;
 }
+
+.col {
+    margin: 0 auto;
+}
+
+.Aligner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    /* background-color: white; */
+  }
+  
+  .Aligner-item {
+    /* background-color: red; */
+    max-width: 100%;
+    /* width: 50%; */
+    height:50%;
+  }
