--- a/style.css
+++ b/style.css
@@ -39,11 +39,17 @@ body {
 }
 
 .container {
+    display: none;
     /* margin-right: 5%; */
     /* margin-left: 5%; */
-    padding: 5%;
-    display: none;
+    /* padding: 5%; */
+    padding-top: 5%;
 }
+@media only screen and (max-width: 950px) {
+    .container {
+        padding: 8%;
+    }
+ }
 
 .col {
     margin: 0 auto;
